--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>タスク一覧</h1>
+<h1>タスク一覧</h1> 
 
 <table>
   <thead>
@@ -12,7 +12,7 @@
   <tbody>
     <% @tasks.each do |task| %>
       <tr>
-        <td><%= task.task_name %></td>
+        <td class="task_list"><%= task.task_name %></td>
         <td><%= task.content %></td>
         <td><%= link_to '詳細', task %></td>
         <td><%= link_to '編集', edit_task_path(task) %></td>
@@ -21,7 +21,6 @@
     <% end %>
   </tbody>
 </table>
-
 <br>
 
 <%= link_to '新規タスク', new_task_path %>
